# acabox

./: .env.local.example  .gitignore  .mcp.json  AGENTS.md  BRIDGE_COMPATIBILITY_FIX.md  BRIDGE_USAGE.md  BUGS.md  CLAUDE.md  CODESIGNING.md  FIX_SUMMARY.md  INTEGRATION_STATUS.md  OVERLAY_ARCHITECTURE_PLAN.md  README.md  SELECTION_TRACKER_IMPLEMENTATION.md  app-update.yml  buildspec.yml  cleanup.sh  entitlements.plist  eslint.config.js  forge.config.js  index.html  jest.config.js  main.js  package-lock.json  package.json  preload.js  renderer.js  sign-app.js  test-cleanup.sh  tsconfig.cobuilding.json  tsconfig.json  tsconfig.renderer.json  uploader.js  webpack.agent-server.config.js  webpack.main.config.js  webpack.native-watch.plugin.js  webpack.plugins.js  webpack.popup.config.js  webpack.renderer.config.js  webpack.rules.js
.github/: claude-review-blacklist.json
.github/workflows/: build.yml  ci.yml  claude-code-review.yml  container-base-core.yml  container-base.yml  macos-tests.yml
docs/: ARCHITECTURE.md  AUTO_UPDATER.md  FEED_SERVER.md
docs/design/: phase-b-design-brief.md
mcp/: activity-mcp-server.js  ms-word-mcp-server.js  ms-word.md
ms_office_addin/: commands.html  manifest-local.xml  taskpane.html
scripts/: build-cobuilding-prestart.js  build-cobuilding-rust.js  build-native-safe.js  build-signed.sh  check-native-deps.js  cleanup-old-paths.sh  cleanup-sessions.js  clear-tar-cache.sh  deny-network.sb  download-browser-extension.sh  download-podman-binaries.sh  ensure-linux-claude-binary.sh  gen-icons.mjs  generate-update-manifest.js  generate-version.sh  poc-reset-dev.sh  podman.sh  rename-dev-electron.js  reset-accessibility-permission.sh  reset-dev.sh  reset-downloads.sh  sideload-word-addin.js  sideload-word-addin.sh  simulate-download.sh  smoke-test-cobuild.sh  smoke-test.sh  update-manifest.js
src/: activityTracker.ts  activityTrackerFactory.ts  apiCall.ts  apiClient.ts  appStore.ts  encryptedCookieStore.ts  eventsManager.ts  global.d.ts  images.d.ts  index.html  localAgentService.ts  localConversationDb.ts  localConversationDbFactory.ts  main.ts  notificationManager.ts  notificationService.ts  overlay.html  podmanService.ts  preload.ts  projectSyncService.ts  remoteFeatureFlags.ts  sessionDb.ts  sessionDbFactory.ts  sessionSyncService.ts  sessionsTracker.ts  sessionsTrackerFactory.ts  syncService.ts  uploader.ts  userDataCache.ts  windowMonitorDb.ts  windowMonitorService.ts  wordIntegrationDataStore.ts  wordIntegrationDataStoreV2.ts  wordIntegrationService.ts  writingAgentMain.ts  zoteroLocalClient.ts
src/__mocks__/: deviceId.ts  serialize-error.ts  styleMock.js
src/__tests__/: activityTracker.test.ts  apiClient.test.ts  auto-updater-behavior.test.ts  auto-updater-integration.test.ts  auto-updater.test.ts  cloudfrontValidation.test.ts  computeWebviewState.test.ts  deriveWebviewCommands.test.ts  encryptedCookieStore.test.ts  eventsManager.test.ts  ipcHandlers.test.ts  localAgentService.test.ts  localConversationDbFactory.test.ts  uploader.test.ts  (+11 more)
src/cobuilding/rust/file-monitor-mac/: Cargo.toml  build.rs
src/cobuilding/rust/file-monitor-mac/src/: accessibility.rs  events.rs  main.rs
tmp/: aws-setup-guide.md
webview-manager/rust/: Cargo.toml  build.rs
webview-manager/rust/src/: commands.rs  debug.rs  desired_state.rs  lib.rs  main.rs  manager.rs  panel.rs  responses.rs  webview.rs
window-monitor/: Makefile  WindowInfo.h  WindowInfo.mm  WindowMonitor.h  WindowMonitor.mm  main.mm
window-monitor/rust/: Cargo.toml  build.rs
window-monitor/rust/src/: accessibility.rs  applescript.rs  document_text.rs  event_models.rs  event_types.rs  lib.rs  main.rs  text_selection.rs  window_list.rs  window_monitor.rs  workspace.rs
(+774 files in other folders)
