[package]
name = "webview-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
signal-hook = "0.3"
core-foundation-sys = "0.8"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSPanel", "NSColor", "NSView", "NSResponder", "NSGraphics", "NSRunningApplication"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKPreferences", "WKNavigation"] }
raw-window-handle = "0.6"
wry = "0.54"
