[package]
name = "webview-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "webview_manager"
path = "src/lib.rs"

[[bin]]
name = "webview-manager"
path = "src/main.rs"

[[bin]]
name = "test_copy_paste"
path = "src/bin/test_copy_paste.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
signal-hook = "0.3"
core-foundation-sys = "0.8"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject", "NSThread", "NSURL", "NSURLRequest", "NSValue", "NSRunLoop", "NSDate"] }
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSPanel", "NSColor", "NSView", "NSResponder", "NSGraphics", "NSRunningApplication", "NSEvent", "NSPasteboard", "NSGraphicsContext", "NSMenu", "objc2-core-graphics"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "objc2-core-graphics"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKPreferences", "WKNavigation", "objc2-app-kit", "block2"] }
