[package]
name = "window-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "window_monitor_lib"
path = "src/lib.rs"

[[bin]]
name = "window-monitor"
path = "src/bin/window_monitor.rs"

[[bin]]
name = "word-actions"
path = "src/bin/word_actions.rs"

[[bin]]
name = "selection-monitor"
path = "src/bin/selection_monitor.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.24"
core-graphics-types = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSDictionary", "NSNotification", "NSRunLoop", "NSObject", "NSThread", "block2", "NSOperation", "NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWorkspace", "NSRunningApplication", "NSPasteboard", "NSPasteboardItem"] }
block2 = "0.6"
signal-hook = "0.3"
libc = "0.2"
ureq = { version = "3", features = ["json"] }
