[package]
name = "file-monitor-mac"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "file-monitor-mac"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSDictionary", "NSNotification", "NSRunLoop", "NSObject", "NSThread", "block2", "NSOperation"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWorkspace", "NSRunningApplication"] }
block2 = "0.6"
signal-hook = "0.3"
libc = "0.2"
